# eventbrite-api-rs

./: Cargo.toml  build.rs
api/: eventbriteapiv3public.source
patch/: fix_pagination.patch  v1.rs  v2.rs
src/: eventbriteapiv3public.rs  lib.rs  main.rs
